# sapling-crypto

./: Cargo.toml  build.rs
.circleci/: config.yml
asm/: ext_twisted_ed_add.S
benches/: pedersen_hash.rs  twisted_edwards_jujub_add.rs
examples/: twisted_edwards_jubjub_add.rs
src/: group_hash.rs  lib.rs  pedersen_hash.rs  redjubjub.rs  util.rs
src/circuit/: ecc.rs  mod.rs  pedersen_hash.rs  uint32.rs
src/jubjub/: edwards.rs  fs.rs  mod.rs  montgomery.rs  tests.rs  twisted_edwards_add.rs
src/primitives/: mod.rs
